force-app/main/default/objects/Tally_API_Integration__mdt/Tally_API_Integration__mdt.object-meta.xml
<CustomObject>
    <description>Tally API Integration cusom metadata type</description>
    <label>Tally API Integration</label>
    <pluralLabel>Tally API Integrations</pluralLabel>
</CustomObject>