force-app/main/default/objects/Tally_API_Integration__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <description>API Version for Tally Integration</description>
    <label>API Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>