force-app/main/default/objects/Tally_API_Integration__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Base URL for the Tally Integration</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>