force-app/main/default/objects/Tally_API_Integration__mdt/fields/Invoice_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Endpoint__c</fullName>
    <description>Invoice Endpoint for the Tally Integration</description>
    <label>Invoice Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>