force-app/main/default/objects/Tally_API_Integration__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Timeout for the Tally API Integration</description>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>