force-app/main/default/objects/Tally_API_Integration__mdt/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <description>Token Endpoint for the Tally Integration</description>
    <label>Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>