force-app/main/default/objects/Tally_API_Integration__mdt/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <description>Token Type for the Tally API Integration</description>
    <label>Token Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>