force-app/main/default/objects/Tally_API_Integration__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for the Tally Integration</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>